@@ -322,5 +322,12 @@ October 24, 2002:
 
 (110) Fixed compiliation of freeglut_joystick.c on FreeBSD
 
+*******************************************************************************************
+* Freeglut 2.0.0 Released on  September 29, 2003!
+*******************************************************************************************
+	
+*******************************************************************************************
+* Changes on October 3, 2003
+*******************************************************************************************
 
-
+(110) Tweaking for the menu behavior on Linux regarding mice, etc. - John Fay
